--- a/client/src/index.css
+++ b/client/src/index.css
@@ -339,7 +339,9 @@ button {
 /* Landing Page */
 .landing {
   position: relative;
-  background: #fff;
+  /* background: #fff; */
+  background-color: #abe9cd;
+  background-image: linear-gradient(315deg, #abe9cd 0%, #3eadcf 74%);
   height: 100vh;
 }
 
