--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,11 @@
   --success-color: #28a745;
 }
 
+.container-form {
+  width: 100%;
+  margin-bottom: 3rem;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -45,7 +50,7 @@ img {
   max-width: 1100px;
   margin: auto;
   overflow: hidden;
-  padding: 0 2rem;
+  /* padding: 0 2rem; */
   margin-top: 6rem;
   margin-bottom: 3rem;
 }
