--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,6 +18,18 @@
   margin-bottom: 3rem;
 }
 
+.iphone {
+  position: relative;
+  margin: 40px auto;
+  width: 360px;
+  height: 780px;
+  background-color: #7371ee;
+  background-image: linear-gradient(60deg, #7371ee 1%, #a1d9d6 100%);
+  border-radius: 40px;
+  box-shadow: 0px 0px 0px 11px #1f1f1f, 0px 0px 0px 13px #191919,
+    0px 0px 0px 20px #111;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
