--- a/client/src/index.css
+++ b/client/src/index.css
@@ -463,13 +463,18 @@ button {
   /* background-color: #abe9cd;
   background-image: linear-gradient(315deg, #abe9cd 0%, #3eadcf 74%); */
   height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .landing-inner {
+  margin-top: 80px;
   color: #000;
-  height: 100%;
+  height: 100vh;
   width: 80%;
-  margin: auto;
+  /* margin: auto; */
   display: flex;
   flex-direction: column;
   align-items: center;
