--- a/client/src/index.css
+++ b/client/src/index.css
@@ -160,7 +160,7 @@ img {
 
 /* Utilities */
 .container {
-  height: 120vh;
+  /* height: 120vh; */
   max-width: 1100px;
   margin: auto;
   overflow: hidden;
