--- a/client/src/index.css
+++ b/client/src/index.css
@@ -317,6 +317,11 @@ img {
 }
 
 .alert {
+  position: fixed;
+  left: -2px;
+  bottom: 0px;
+  z-index: 50;
+  width: 100%;
   padding: 0.8rem;
   margin: 1rem 0;
   opacity: 0.9;
