added side dashboard

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -143,7 +143,7 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
+  /* background-color: #fff; */
   color: #333;
 }
 
