styled table in the dashboard

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -464,19 +464,40 @@ button {
   color: #0077b5;
 }
 
-.table th,
-.table td {
+/* Table  */
+
+.table {
+  border-spacing: 0 15px;
+}
+
+i {
+  font-size: 1rem !important;
+}
+
+.table tr {
+  border-radius: 20px;
+}
+
+tr td:nth-child(n + 5),
+tr th:nth-child(n + 5) {
+  border-radius: 0 0.625rem 0.625rem 0;
+}
+
+tr td:nth-child(1),
+tr th:nth-child(1) {
+  border-radius: 0.625rem 0 0 0.625rem;
+}
+
+.WorkoutTable th,
+.WorkoutTable td {
   /* padding: 1rem; */
   padding: 10px;
   text-align: center;
 }
 
-.table th {
-  color: #fff;
-}
-
-.table th {
+.WorkoutTable th {
   background: var(--light-color);
+  color: #fff;
 }
 
 /* Navbar */
