--- a/client/src/index.css
+++ b/client/src/index.css
@@ -163,6 +163,7 @@ img {
 /* Utilities */
 .container {
   /* height: 120vh; */
+  /* height: auto; */
   max-width: 1100px;
   margin: auto;
   overflow: hidden;
