--- a/client/src/index.css
+++ b/client/src/index.css
@@ -166,7 +166,7 @@ img {
   /* height: auto; */
   max-width: 1100px;
   margin: auto;
-  overflow: hidden;
+  /* overflow: hidden; */
   /* padding: 0 2rem; */
   margin-top: 6rem;
   margin-bottom: 3rem;
